Portfolio fetches text from HelloWorldServlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,6 +33,10 @@
         </a>
       </div>
     </div>
+    <div>
+      <p><b>The server says:</b></p>
+      <p id="server-p"></p>
+    </div>
   </div>
   <div id="about-me">
     <h2>About Me</h2>
