Show random fact below left column

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,9 +33,12 @@
         </a>
       </div>
     </div>
-    <div>
-      <p><b>The server says:</b></p>
-      <p id="server-p"></p>
+    <div id="random-fact-div">
+      <p>
+        <b>A random fact about me:</b>
+      </p>
+      <p id="random-fact-container"></p>
+      <button id="random-fact-btn">Get fact</button>
     </div>
   </div>
   <div id="about-me">
