Add music recommendations link to the header

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,6 +14,7 @@
 <body>
 <header>
   <p>my portfolio</p>
+  <a href="music_recommendations.html">recommend me some music!</a>
 </header>
 <div id="content">
   <div id="side-info">
