--- a/portfolio/src/main/webapp/music_recommendations.html
+++ b/portfolio/src/main/webapp/music_recommendations.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <header>
+  <a href="index.html">my portfolio</a>
   <p>recommend me some music!</p>
 </header>
 <div id="content">
