--- a/portfolio/src/main/webapp/music_recommendations.html
+++ b/portfolio/src/main/webapp/music_recommendations.html
@@ -11,6 +11,7 @@
 <body>
 <header>
   <a href="index.html">my portfolio</a>
+  <a href="languages.html">languages</a>
   <p>recommend me some music!</p>
 </header>
 <div id="content">
